<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightwood">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding5"
            android:paddingRight="@dimen/padding5"
            android:paddingTop="@dimen/padding5"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/notification_large_icon_height"
                android:id="@+id/twIstruzioni1"
                android:text="@string/istruzioni1"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:fontFamily="casual"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/istruzioni2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/instruction1"
                android:id="@+id/twIstruzioni2"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:fontFamily="casual"
                android:textSize="19sp" />

            <TextView
                android:text="@string/istruzioni3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/twIstruzioni3"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:fontFamily="casual"
                android:textSize="19sp"
                android:layout_weight="10.39"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:ignore="InefficientWeight" />

            <TextView
                android:text="@string/istruzioni4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/twIstruzioni4"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:fontFamily="casual"
                android:textSize="19sp"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>