<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:splitMotionEvents="false"
    tools:context="com.example.antho.mastermind.mainactivity.MainActivity"
    android:background="@drawable/provassd">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:splitMotionEvents="false"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <Button
            android:text="@string/facile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEasy"
            android:layout_weight="0.5"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/Medio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnMedium"
            android:layout_weight="0.5"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/difficile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnHard"
            android:layout_weight="0.5"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/btn_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnInst"
            android:layout_weight="0.5"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/btn_game_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnHist"
            android:layout_weight="0.5"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:textStyle="normal|bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>
</RelativeLayout>
